# SnipTool

./: .gitignore  README.md  pyproject.toml
src/snipster/: cli.py  db.py  models.py  repo.py
tests/: conftest.py  test_model.py  test_repo.py
